[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/deckviewer/DeckViewer.gd" type="Script" id=1]
[ext_resource path="res://assets/temp_peter/return_button_deck_viewer.png" type="Texture" id=2]

[node name="Screen" type="Control"]
margin_right = 127.0
margin_bottom = 163.0
script = ExtResource( 1 )

[node name="ScrollBox" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -127.0
margin_bottom = -151.0

[node name="VerticalBox" type="VBoxContainer" parent="ScrollBox"]
margin_bottom = 50.0

[node name="TopMargin" type="Control" parent="ScrollBox/VerticalBox"]
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Return" type="Button" parent="."]
margin_left = 1704.0
margin_top = 972.0
margin_right = 1932.0
margin_bottom = 1039.0
rect_scale = Vector2( 0.80424, 0.786145 )
icon = ExtResource( 2 )

[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
